# apero

./: .gitmodules  README.md
DATA/: README.md
DATA/pog/0000/: 00001.pog  00003.pog  00004.pog  00005.pog  00006.pog  00010.pog  00013.pog  00016.pog  00017.pog  00019.pog  00020.pog  00021.pog  00027.pog  00029.pog  00031.pog  00032.pog  00033.pog  00034.pog  00036.pog  00038.pog  00039.pog  00041.pog  00042.pog  00044.pog  00045.pog  00047.pog  00048.pog  00049.pog  00052.pog  00054.pog  00056.pog  00057.pog  00058.pog  00060.pog  00063.pog  00064.pog  00065.pog  00066.pog  00067.pog  00068.pog  (+237 more)
DATA/pog/0001/: 00001.pog  00003.pog  00005.pog  00008.pog  00009.pog  00010.pog  00012.pog  00013.pog  00015.pog  00016.pog  00019.pog  00021.pog  00023.pog  00024.pog  00025.pog  00029.pog  00030.pog  00031.pog  00033.pog  00036.pog  00037.pog  00038.pog  00039.pog  (+255 more)
FORMATS/: README.md  pog.xsd
FORMATS/doc/: pog-format.html
TOOLS/pog-classifiers/: Makefile  README.md  bounds.cpp  bounds.h  metrics.cpp  metrics.h  options.h  pogmetrics.cpp  pugiconfig.hpp  pugipog.cpp  pugipog.h  symbols.cpp  symbols.h
TOOLS/pog-translators/: .gitignore  CMakeLists.txt  README.md
TOOLS/pog-translators/BAST/: CMakeLists.txt  btype.cpp  btype.h  expr.cpp  expr.h  exprDesc.h  exprReader.cpp  exprReader.h  exprWriter.cpp  exprWriter.h  gpred.cpp  gpred.h  gpredReader.cpp  gpredReader.h  hashutil.h  pred.cpp  pred.h  predDesc.h  predReader.cpp  predReader.h  predWriter.cpp  predWriter.h  subst.cpp  subst.h  substReader.cpp  substReader.h  vars.cpp  vars.h
TOOLS/pog-translators/POGLoader/: CMakeLists.txt  pog.cpp  pog.h
TOOLS/pog-translators/PPTRANSSMT/: CMakeLists.txt  decomposition.cpp  decomposition.h  note-licence.c  ppTrans.cpp  ppTrans.h  ppTransIncr.cpp  ppTransIncr.h  ppTransNonIncr.cpp  ppTransNonIncr.h  ppTransSmt.cpp  utils.cpp  utils.h
(+4433 files in other folders)
